# pndf

./: .gitignore  0001-add-collapse-profiler-and-rebuild-interval-cli.patch  0002-local-edge-refresh-and-expanded-profiler.patch  0003-add-multitarget-checkpoints-and-periodic-downsample.patch  0004-fix-torus-qem-chart-rebasing.patch  0005-add-standalone-dense-metrics-script.patch  0005-add-visualizer-metrics-csv.patch  0006-add-sampled-pndf-evaluator-and-visualizer.patch  0007-add-pndf-evaluator-sanity-tests.patch  0008-add-pnm-aniso-interleaved-optimizer-nocmake.patch  0008-add-pnm-aniso-interleaved-optimizer.patch  0009-add-pnm-aniso-sweep-script.patch  0011-add-pnm-aniso-safe-ops-rewrite-and-audit.patch  0013-add-pnm-aniso-he-sweep-script.patch  0014-add-uv-embedding-audit-to-topology-script.patch  0015-add-periodic-isconvex-guard-to-he-flip.patch  0015b-add-periodic-isconvex-guard-to-he-flip.patch  0015c-add-periodic-isconvex-guard-to-he-flip.patch  CMakeLists.txt  CMakePresets.json  README.md  current_degenerate_guard.diff.txt  prepare.ps1  run_pndf_quality_pipeline_v2.ps1  run_qem_normal.ps1  vcpkg.json
apps/: pndf_eval_mesh.cpp  pndf_run_pnm_aniso.cpp  pndf_run_pnm_aniso_he.cpp  pndf_run_qem.cpp
out256_4d/: brush_4d_ds4_v16384.meshbin  brush_4d_ds4_v32768.meshbin  brush_4d_ds4_v4096.meshbin  brush_4d_ds4_v49152.meshbin  brush_4d_ds4_v8192.meshbin  isotropic_4d_ds4_v16384.meshbin  isotropic_4d_ds4_v32768.meshbin  isotropic_4d_ds4_v4096.meshbin  isotropic_4d_ds4_v49152.meshbin  isotropic_4d_ds4_v8192.meshbin  scratched_4d_ds4_v16384.meshbin  scratched_4d_ds4_v32768.meshbin  scratched_4d_ds4_v4096.meshbin  scratched_4d_ds4_v49152.meshbin  scratched_4d_ds4_v8192.meshbin
out256_normal/: brush_normal_ds4_v16384.meshbin  brush_normal_ds4_v32768.meshbin  brush_normal_ds4_v4096.meshbin  brush_normal_ds4_v49152.meshbin  brush_normal_ds4_v8192.meshbin  isotropic_normal_ds4_v16384.meshbin  isotropic_normal_ds4_v32768.meshbin  isotropic_normal_ds4_v4096.meshbin  isotropic_normal_ds4_v49152.meshbin  isotropic_normal_ds4_v8192.meshbin  scratched_normal_ds4_v16384.meshbin  scratched_normal_ds4_v32768.meshbin  scratched_normal_ds4_v4096.meshbin  scratched_normal_ds4_v49152.meshbin  scratched_normal_ds4_v8192.meshbin
out256_normal_rebased/: brush_normal_ds4_v4096.meshbin  isotropic_normal_ds4_v4096.meshbin  scratched_normal_ds4_v4096.meshbin
out512_normal/: brush_normal_ds2_v16384.meshbin  brush_normal_ds2_v32768.meshbin  brush_normal_ds2_v65536.meshbin  isotropic_normal_ds2_v16384.meshbin  isotropic_normal_ds2_v32768.meshbin  isotropic_normal_ds2_v65536.meshbin  scratched_normal_ds2_v16384.meshbin  scratched_normal_ds2_v32768.meshbin  scratched_normal_ds2_v65536.meshbin
python/: analyze_embedding_failures.py  pndf_eval_pndf.py  pndf_eval_pndf_sanity.py  pndf_mesh_metrics.py  prepare_nxy.py  visualize_pndf_mesh.py
scripts/: audit_mesh_topology.py  extract_quality_data.ps1  register_pnm_aniso_cmake.ps1  register_pnm_aniso_he_cmake.ps1  rewrite_pnm_aniso_safe_ops.py  run_budget_sweep.ps1  run_pndf_quality_pipeline.ps1  run_pnm_aniso_he_sweep.ps1  run_pnm_aniso_sweep.ps1  run_tests.ps1  visualize.ps1  visualize_all.ps1  visualize_pndf.ps1
src/: edge_collapse.cpp  eval.cpp  mesh_io.cpp  normal_map.cpp  qem.cpp  torus_mesh.cpp
tests/: test_collapse.cpp  test_common.hpp  test_main.cpp  test_qem.cpp  (+1 more)
(+289 files in other folders)
